remove flag noPrependStageInUrl

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "scripts": {
-  "start": "npm run build && serverless offline start --noPrependStageInUrl",
+  "start": "npm run build && serverless offline start",
   "build": "npx tsc",
 	"deploy-dev": "npm run build && serverless deploy --stage dev",
 	"deploy-prod": "npm run build && serverless deploy --stage prod"
