--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "scripts": {
-  "start": "npm run build && serverless offline start",
+  "start": "concurrently \"npm run build\" \"nodemon\"  \"serverless offline start --noPrependStageInUrl\"",
   "build": "npx tsc",
   "deploy-dev": "npm run build && serverless deploy --stage dev",
   "deploy-prod": "npm run build && serverless deploy --stage prod"
@@ -9,6 +9,8 @@
   "@types/cors": "^2.8.12",
   "@types/express": "^4.17.13",
   "@types/node": "^17.0.34",
+  "concurrently": "^7.2.0",
+  "nodemon": "^2.0.16",
   "serverless-offline": "^8.8.0",
   "typescript": "^4.6.4"
  },
