--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "scripts": {
-  "start": "concurrently \"npm run build\" \"nodemon\"  \"serverless offline start --noPrependStageInUrl\"",
+  "start": "npm run build && concurrently \"nodemon\"  \"serverless offline start --noPrependStageInUrl\"",
   "build": "npx tsc",
   "deploy-dev": "npm run build && serverless deploy --stage dev",
   "deploy-prod": "npm run build && serverless deploy --stage prod"
@@ -11,10 +11,12 @@
   "@types/node": "^17.0.34",
   "concurrently": "^7.2.0",
   "nodemon": "^2.0.16",
+  "prisma": "3.13.0",
   "serverless-offline": "^8.8.0",
   "typescript": "^4.6.4"
- },
+},
  "dependencies": {
+  "@prisma/client": "3.13.0",
   "cors": "^2.8.5",
   "express": "^4.18.1",
   "serverless-http": "^3.0.1"
