--- a/serverless.yaml
+++ b/serverless.yaml
@@ -19,11 +19,16 @@ functions:
           path: /{proxy+}
           method: ANY
           cors: true
+
 plugins:
   - serverless-offline
 
 package:
   patterns:
+    - '!node_modules/.prisma/client/libquery_engine-*'
+    - 'node_modules/.prisma/client/libquery_engine-rhel-*'
+    - '!node_modules/prisma/libquery_engine-*'
+    - '!node_modules/@prisma/engines/**'
     - '!package-lock.json'
     - '!tsconfig.json'
     - '!nodemon.json'
