--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "start": "npm run build && concurrently \"nodemon\"  \"serverless offline start --noPrependStageInUrl\"",
   "build": "npx tsc",
   "deploy-dev": "npm run build && serverless deploy --stage dev",
-  "deploy-prod": "npm run build && serverless deploy --stage prod"
+  "deploy-prod": "npm run build && serverless deploy --stage prod",
+  "seed": "ts-node prisma/seed.dev.ts"
  },
  "devDependencies": {
   "@types/cors": "^2.8.12",
@@ -13,8 +14,9 @@
   "nodemon": "^2.0.16",
   "prisma": "3.13.0",
   "serverless-offline": "^8.8.0",
+  "ts-node": "^10.7.0",
   "typescript": "^4.6.4"
-},
+ },
  "dependencies": {
   "@prisma/client": "3.13.0",
   "cors": "^2.8.5",
